<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_black_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/outline_location_on_white_24"
            android:title="@string/menu_Gmap" />

        <item
            android:id="@+id/nav_ShoppingCart"
            android:icon="@drawable/outline_help_outline_black_24"
            android:title="@string/menu_ShoppingCart" />
    </group>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_rule"
                    android:title="@string/menu_rule"/>
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/menu_Logout" />
            </group>
        </menu>
    </item>
</menu>